--- a/Engine/src/resources/viewFXML/s-emulator-ui.fxml
+++ b/Engine/src/resources/viewFXML/s-emulator-ui.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="root" stylesheets="@semulator.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.SemulatorController">
+<BorderPane fx:id="root" stylesheets="@semulator.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.SemulatorController">
 
     <!-- ===== TOP BAR ===== -->
     <top>
