--- a/Engine/src/resources/viewFXML/execution.fxml
+++ b/Engine/src/resources/viewFXML/execution.fxml
@@ -1,135 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns="http://javafx.com/javafx/17"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="ui.controllers.ExecutionController">
+<VBox xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.ExecutionController">
 
-    <children>
-        <TitledPane expanded="true" text="Debugger / Execution" VBox.vgrow="ALWAYS">
-            <content>
-                <VBox spacing="8">
+  <children>
+    <TitledPane expanded="true" text="Debugger / Execution" VBox.vgrow="ALWAYS">
+      <content>
+        <VBox spacing="8">
+          <children>
+            <ToolBar>
+              <items>
+                <Button fx:id="btnRun" onAction="#onRun" text="Run" />
+                <Button fx:id="btnDebug" onAction="#onDebug" text="Debug" />
+                <Button fx:id="btnStepOver" onAction="#onStepOver" text="Step Over" />
+                <Button fx:id="btnClear" onAction="#onStop" text="Stop" />
+                <Button fx:id="btnResume" onAction="#onResume" prefWidth="58.0" text="Resume" />
+              </items>
+            </ToolBar>
+
+            <GridPane hgap="10" prefHeight="257.0" prefWidth="684.0" vgap="10">
+              <columnConstraints>
+                <!-- שתי עמודות 50/50 לרוחב שווה -->
+                <ColumnConstraints hgrow="ALWAYS" percentWidth="50" />
+                <ColumnConstraints hgrow="ALWAYS" percentWidth="50" />
+              </columnConstraints>
+              <rowConstraints>
+                <!-- השורה העליונה נמתחת במלואה -->
+                <RowConstraints maxHeight="421.0" minHeight="196.0" prefHeight="204.0" vgrow="ALWAYS" />
+                <RowConstraints maxHeight="229.0" minHeight="90.0" prefHeight="125.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+
+              <!-- Variables: מאפשר גידול מלא + גובה בלתי מוגבל -->
+              <TitledPane expanded="true" maxHeight="Infinity" text="Variables" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS">
+                <content>
+                  <TableView fx:id="tblVariables" prefWidth="335.0" VBox.vgrow="ALWAYS">
+                    <columnResizePolicy>
+                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                    <columns>
+                      <TableColumn fx:id="colVarName" maxWidth="220" prefWidth="120" text="Name" />
+                      <TableColumn fx:id="colVarType" maxWidth="160" prefWidth="145.0" text="Type" />
+                      <TableColumn fx:id="colVarValue" prefWidth="168.0" text="Value" />
+                    </columns>
+                  </TableView>
+                </content>
+              </TitledPane>
+
+              <!-- Execution Inputs: זהה ל-Variables בגידול וברום -->
+              <TitledPane expanded="true" maxHeight="Infinity" prefWidth="337.0" text="Execution Inputs" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS">
+                <content>
+                  <VBox spacing="6">
                     <children>
-                        <ToolBar>
-                            <items>
-                                <Button fx:id="btnRun"      text="Run"       onAction="#onRun"/>
-                                <Button fx:id="btnDebug"    text="Debug"     onAction="#onDebug"/>
-                                <Button fx:id="btnStepOver" text="Step Over" onAction="#onStepOver"/>
-                                <Button fx:id="btnStepBack" text="Step Back" onAction="#onStepBack"/>
-                                <Button fx:id="btnStop"     text="Stop"      onAction="#onStop"/>
-                                <Button fx:id="btnResume"   text="Resume"      onAction="#onResume"/>
-                            </items>
-                        </ToolBar>
 
-                        <GridPane hgap="10" vgap="10">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="ALWAYS" percentWidth="50"/>
-                                <ColumnConstraints hgrow="ALWAYS" percentWidth="50"/>
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints vgrow="ALWAYS"/>
-                                <RowConstraints vgrow="SOMETIMES"/>
-                            </rowConstraints>
+                      <ScrollPane fx:id="inputsScroll" fitToWidth="true" hbarPolicy="NEVER" prefHeight="105.0" prefWidth="316.0" vbarPolicy="AS_NEEDED" VBox.vgrow="ALWAYS">
+                        <content>
+                          <VBox fx:id="inputsContainer" fillWidth="true" spacing="6" stylesheets="@execution.css" />
+                        </content>
+                      </ScrollPane>
 
-                            <TitledPane expanded="true" text="Variables"
-                                        GridPane.columnIndex="0" GridPane.rowIndex="0"
-                                        GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                                <content>
-                                    <TableView fx:id="tblVariables" VBox.vgrow="ALWAYS">
-                                        <columnResizePolicy>
-                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                                        </columnResizePolicy>
-                                        <columns>
-                                            <TableColumn fx:id="colVarName"  text="Name"  prefWidth="120" maxWidth="220"/>
-                                            <TableColumn fx:id="colVarType"  text="Type"  prefWidth="100" maxWidth="160"/>
-                                            <TableColumn fx:id="colVarValue" text="Value" prefWidth="120"/>
-                                        </columns>
-                                    </TableView>
-                                </content>
-                            </TitledPane>
+                      <!-- ספייסר (אפשר להשאיר; הוא לא יפגע בשוויון הגובה между ה-TitledPane) -->
+                      <Pane VBox.vgrow="ALWAYS" />
 
-                            <TitledPane expanded="true" text="Execution Inputs"
-                                        GridPane.columnIndex="1" GridPane.rowIndex="0"
-                                        GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                                <content>
-                                    <VBox spacing="6">
-                                        <children>
-
-                                            <ScrollPane fx:id="inputsScroll"
-                                                        fitToWidth="true"
-                                                        hbarPolicy="NEVER"
-                                                        vbarPolicy="AS_NEEDED"
-                                                        VBox.vgrow="ALWAYS">
-                                                <content>
-                                                    <VBox fx:id="inputsContainer"
-                                                          spacing="6"
-                                                          fillWidth="true"
-                                                          stylesheets="@execution.css"/>
-                                                </content>
-                                            </ScrollPane>
-
-                                            <!-- ספייסר (אם עדיין צריך אותו) -->
-                                            <Pane VBox.vgrow="ALWAYS"/>
-
-                                            <HBox fx:id="hBoxStart" alignment="TOP_CENTER">
-                                                <children>
-                                                    <Button fx:id="btnStart" text="Start" onAction="#onStart"/>
-                                                </children>
-                                            </HBox>
-                                        </children>
-                                    </VBox>
-                                </content>
-                            </TitledPane>
-
-
-                            <TitledPane expanded="true" text="Cycles"
-                                        GridPane.columnIndex="0" GridPane.rowIndex="1"
-                                        GridPane.hgrow="ALWAYS">
-                                <content>
-                                    <VBox spacing="8">
-                                        <children>
-                                            <HBox alignment="CENTER_LEFT" spacing="6">
-                                                <children>
-                                                    <Label text="Total cycles:"/>
-                                                    <Label fx:id="lblCycles" text="0"/>
-                                                </children>
-                                            </HBox>
-                                            <ProgressBar fx:id="prgExecution" progress="0.0" maxWidth="Infinity"/>
-                                        </children>
-                                        <padding>
-                                            <Insets top="8" right="8" bottom="8" left="8"/>
-                                        </padding>
-                                    </VBox>
-                                </content>
-                            </TitledPane>
-
-                            <TitledPane expanded="true" text="Output (y)"
-                                        GridPane.columnIndex="1" GridPane.rowIndex="1"
-                                        GridPane.hgrow="ALWAYS">
-                                <content>
-                                    <VBox spacing="8">
-                                        <children>
-                                            <TextField fx:id="txtOutput" editable="false" promptText="y" maxWidth="Infinity"/>
-                                        </children>
-                                        <padding>
-                                            <Insets top="8" right="8" bottom="8" left="8"/>
-                                        </padding>
-                                    </VBox>
-                                </content>
-                            </TitledPane>
-                        </GridPane>
+                      <HBox fx:id="hBoxStart" alignment="TOP_CENTER">
+                        <children>
+                          <Button fx:id="btnStart" onAction="#onStart" text="Start" />
+                        </children>
+                      </HBox>
                     </children>
-                </VBox>
-            </content>
-        </TitledPane>
+                  </VBox>
+                </content>
+              </TitledPane>
 
-        <fx:include source="history.fxml"/>
-    </children>
+              <TitledPane expanded="true" prefHeight="65.0" prefWidth="684.0" text="Cycles" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                <content>
+                  <VBox spacing="8">
+                    <children>
+                      <HBox alignment="CENTER_LEFT" spacing="6">
+                        <children>
+                          <Label text="Total cycles:" />
+                          <Label fx:id="lblCycles" text="0" />
+                        </children>
+                      </HBox>
+                      <ProgressBar fx:id="prgExecution" maxWidth="Infinity" progress="0.0" />
+                    </children>
+                    <padding>
+                      <Insets bottom="8" left="8" right="8" top="8" />
+                    </padding>
+                  </VBox>
+                </content>
+              </TitledPane>
+            </GridPane>
+          </children>
+        </VBox>
+      </content>
+    </TitledPane>
 
-    <padding>
-        <Insets top="12" right="12" bottom="12" left="12"/>
-    </padding>
+    <fx:include source="history.fxml" />
+  </children>
+
+  <padding>
+    <Insets bottom="12" left="12" right="12" top="12" />
+  </padding>
 </VBox>
