--- a/Engine/src/resources/viewFXML/instructions.fxml
+++ b/Engine/src/resources/viewFXML/instructions.fxml
@@ -6,31 +6,63 @@
 
 <VBox xmlns="http://javafx.com/javafx/17"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="ui.controllers.InstructionsController">
+      fx:controller="ui.controllers.InstructionsController"
+      spacing="8">
 
-    <children>
-        <TitledPane expanded="true" text="Instructions" VBox.vgrow="ALWAYS">
-            <content>
-                <VBox spacing="0">
-                    <children>
-                        <TreeTableView fx:id="trvInstructions" prefHeight="400.0">
-                            <columns>
-                                <TreeTableColumn fx:id="colIndex"       text="#"          prefWidth="60"/>
-                                <TreeTableColumn fx:id="colType"        text="B/S"        prefWidth="80"/>
-                                <TreeTableColumn fx:id="colLabel"       text="Label"      prefWidth="120"/>
-                                <TreeTableColumn fx:id="colCycles"      text="Cycles"     prefWidth="80"/>
-                                <TreeTableColumn fx:id="colInstruction" text="Instruction" prefWidth="300"/>
+  <children>
 
-                                <TreeTableColumn fx:id="colExpandFrom"  text="Show Expand" prefWidth="120"/>
-                            </columns>
-                        </TreeTableView>
-                    </children>
-                </VBox>
-            </content>
-        </TitledPane>
-    </children>
+    <!-- ===== TitledPane 1: Instructions ===== -->
+    <TitledPane expanded="true" text="Instructions" VBox.vgrow="ALWAYS">
+      <content>
+        <VBox spacing="0">
+          <children>
+            <TreeTableView fx:id="trvInstructions" prefHeight="400.0" VBox.vgrow="ALWAYS">
+              <columns>
+                <TreeTableColumn fx:id="colIndex"       text="#"            prefWidth="60"/>
+                <TreeTableColumn fx:id="colType"        text="B/S"          prefWidth="80"/>
+                <TreeTableColumn fx:id="colLabel"       text="Label"        prefWidth="120"/>
+                <TreeTableColumn fx:id="colCycles"      text="Cycles"       prefWidth="80"/>
+                <TreeTableColumn fx:id="colInstruction" text="Instruction"  prefWidth="300"/>
+              </columns>
+            </TreeTableView>
 
-    <padding>
-        <Insets top="8" right="8" bottom="8" left="8"/>
-    </padding>
+            <!-- Summary line נשאר בתוך ה-TitledPane הזה -->
+            <HBox spacing="8">
+              <children>
+                <Label text="Summary:" />
+                <Label fx:id="lblSummary" text="Instructions: 0 | B/S: 0/0" />
+              </children>
+              <padding>
+                <Insets top="10" right="12" bottom="10" left="12"/>
+              </padding>
+            </HBox>
+          </children>
+        </VBox>
+      </content>
+    </TitledPane>
+
+    <!-- ===== TitledPane 2: Expand Instruction (ללא Summary) ===== -->
+    <TitledPane expanded="true" text="Instruction History" VBox.vgrow="ALWAYS">
+      <content>
+        <VBox spacing="0">
+          <children>
+            <TreeTableView fx:id="trvInstructionHistory" prefHeight="400.0" VBox.vgrow="ALWAYS">
+              <columns>
+                <TreeTableColumn fx:id="colExIndex"       text="#"            prefWidth="60"/>
+                <TreeTableColumn fx:id="colExType"        text="B/S"          prefWidth="80"/>
+                <TreeTableColumn fx:id="colExLabel"       text="Label"        prefWidth="120"/>
+                <TreeTableColumn fx:id="colExCycles"      text="Cycles"       prefWidth="80"/>
+                <TreeTableColumn fx:id="colExInstruction" text="Instruction"  prefWidth="300"/>
+              </columns>
+            </TreeTableView>
+          </children>
+        </VBox>
+      </content>
+    </TitledPane>
+
+  </children>
+
+  <padding>
+    <Insets top="8" right="8" bottom="8" left="8"/>
+  </padding>
 </VBox>
