--- a/Engine/src/resources/viewFXML/root.fxml
+++ b/Engine/src/resources/viewFXML/root.fxml
@@ -1,22 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane stylesheets="@semulator.css"
-            xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ui.controllers.RootController">
+<BorderPane stylesheets="@semulator.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.RootController">
 
   <!-- TOP BAR -->
   <top>
@@ -27,8 +15,7 @@
             <Button onAction="#onLoadFile" text="Load File" />
             <Separator orientation="VERTICAL" />
             <Label onMouseEntered="#mouseEnter" onMouseExited="#mouseExit" text="Currently Loaded:" />
-            <Label fx:id="lblFilePath" maxWidth="320" prefWidth="320" text="—" textOverrun="LEADING_ELLIPSIS" />
-            <Separator orientation="VERTICAL" />
+            <Label fx:id="lblFilePath" prefHeight="17.0" prefWidth="761.0" textOverrun="LEADING_ELLIPSIS" />
             <Pane />
           </items>
         </ToolBar>
@@ -36,7 +23,7 @@
         <!-- רווח מתחת לטולבר, עם הבקרים שהוספת -->
         <Pane prefHeight="46.0" prefWidth="1616.0">
           <children>
-            <Button layoutX="14.0"  layoutY="8.0" text="Program\Function selector" />
+            <Button layoutX="14.0" layoutY="8.0" text="Program\Function selector" />
             <Separator layoutX="204.0" layoutY="3.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="11.0" />
             <Button fx:id="btnCollapse" layoutX="216.0" layoutY="7.0" onAction="#onCollapse" text="Collapse" />
             <HBox layoutX="306.0" layoutY="6.0" spacing="6">
@@ -47,10 +34,12 @@
                     <SpinnerValueFactory.IntegerSpinnerValueFactory initialValue="0" max="0" min="0" />
                   </valueFactory>
                 </Spinner>
-                <Label fx:id="lblMaxDegree" text="/ 0" />
+                <Label fx:id="lblMaxDegree" prefHeight="31.0" prefWidth="16.0" text="/ 0" />
               </children>
             </HBox>
             <Button fx:id="btnExpand" layoutX="561.0" layoutY="6.0" onAction="#onExpand" text="Expand" />
+                  <Separator layoutX="637.0" layoutY="1.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="11.0" />
+                  <Button fx:id="btnHighlightSelector" layoutX="658.0" layoutY="6.0" mnemonicParsing="false" text="Vairable\Label Selector" onAction="#onHighLight" />
           </children>
         </Pane>
 
