--- a/Engine/src/resources/viewFXML/history.fxml
+++ b/Engine/src/resources/viewFXML/history.fxml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<TitledPane expanded="true" text="History / Statistics" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.HistoryController">
+<TitledPane expanded="true" text="History / Statistics" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.HistoryController">
 
     <content>
         <VBox spacing="8">
             <children>
 
-                <TableView fx:id="tblHistory" maxHeight="Infinity" prefHeight="260">
+                <TableView fx:id="historyTable" maxHeight="Infinity" prefHeight="260">
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                     </columnResizePolicy>
                     <columns>
-                        <TableColumn fx:id="colSelectedRun" prefWidth="120" text="Run Number" />
-                        <TableColumn fx:id="colRunTime" prefWidth="120" text="Run Number" />
+                        <TableColumn fx:id="colRunNumber" prefWidth="186.0" text="Run Number" />
                         <TableColumn fx:id="colDegree" prefWidth="120" text="Degree" />
-                        <TableColumn fx:id="colRunY" prefWidth="80" text="Y" />
-                        <TableColumn fx:id="colRunCycles" prefWidth="90" text="Cycles" />
+                        <TableColumn fx:id="colY" prefWidth="80" text="Y" />
+                        <TableColumn fx:id="colCycles" prefWidth="90" text="Cycles" />
                     </columns>
                 </TableView>
                 <ToolBar>
                     <items>
-                        <Button fx:id="btnShowStats" onAction="#onShowStats" text="Show" />
-                        <Button fx:id="btnRerun" onAction="#onRerun" text="Re-run" />
+                        <Button fx:id="btnShow" onAction="#onShow" text="Show" disable="true"/>
+                        <Button fx:id="btnReRun" onAction="#onRerun" text="Re-run" disable="true" />
                         <Pane />
                     </items>
                 </ToolBar>
