--- a/Engine/src/resources/viewFXML/semulator.css
+++ b/Engine/src/resources/viewFXML/semulator.css
@@ -235,3 +235,8 @@
     -fx-background-color: #ddffff
 }
 
+.table-view .table-cell:changed {
+    -fx-background-color: #fff8b3; /* צהוב עדין */
+    -fx-font-weight: bold;
+}
+
