--- a/Engine/src/resources/viewFXML/semulator.css
+++ b/Engine/src/resources/viewFXML/semulator.css
@@ -235,8 +235,10 @@
     -fx-background-color: #ddffff
 }
 
-.table-view .table-cell:changed {
-    -fx-background-color: #fff8b3; /* צהוב עדין */
-    -fx-font-weight: bold;
+.table-row-cell:changed {
+    -fx-background-color: #fff8b3;
+    -fx-background-insets: 0;
 }
+
+
 
