finish UI, starting Quete

--- a/UI/resources/viewFXML/history.fxml
+++ b/UI/resources/viewFXML/history.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<TitledPane expanded="true" text="History / Statistics" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.HistoryController">
+<TitledPane expanded="true" text="History / Statistics" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HistoryController">
 
     <content>
         <VBox spacing="8">
