--- a/UI/resources/viewFXML/execution.fxml
+++ b/UI/resources/viewFXML/execution.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.ExecutionController">
+<VBox xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ExecutionController">
 
   <children>
     <TitledPane expanded="true" text="Debugger / Execution" VBox.vgrow="ALWAYS">
