--- a/UI/resources/viewFXML/root.fxml
+++ b/UI/resources/viewFXML/root.fxml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane stylesheets="@semulator.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RootController">
+<BorderPane stylesheets="@semulator.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RootController">
 
   <top>
     <VBox spacing="8" BorderPane.alignment="CENTER_LEFT">
@@ -32,12 +42,12 @@
                     <SpinnerValueFactory.IntegerSpinnerValueFactory initialValue="0" max="0" min="0" />
                   </valueFactory>
                 </Spinner>
-                <Label fx:id="lblMaxDegree" prefHeight="31.0" prefWidth="16.0" text="/ 0" />
+                <Label fx:id="lblMaxDegree" prefHeight="31.0" prefWidth="40.0" text="/ 0" />
               </children>
             </HBox>
-            <Button fx:id="btnExpand" layoutX="561.0" layoutY="6.0" onAction="#onExpand" text="Expand" />
-            <Separator layoutX="637.0" layoutY="1.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="11.0" />
-            <Button fx:id="btnHighlightSelector" layoutX="658.0" layoutY="6.0" mnemonicParsing="false" text="Vairable\Label Selector" onAction="#onHighLight" />
+            <Button fx:id="btnExpand" layoutX="580.0" layoutY="7.0" onAction="#onExpand" text="Expand" />
+            <Separator layoutX="657.0" layoutY="1.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="11.0" />
+            <Button fx:id="btnHighlightSelector" layoutX="679.0" layoutY="6.0" mnemonicParsing="false" onAction="#onHighLight" text="Vairable\Label Selector" />
           </children>
         </Pane>
 
@@ -65,7 +75,7 @@
 
   <!-- BOTTOM: Status bar + Progress -->
   <bottom>
-    <HBox spacing="12" alignment="CENTER_LEFT">
+    <HBox alignment="CENTER_LEFT" spacing="12">
       <children>
         <Label text="Engine:" />
         <Label fx:id="lblEngineState" text="Idle" />
