--- a/UI/resources/viewFXML/root.fxml
+++ b/UI/resources/viewFXML/root.fxml
@@ -31,7 +31,7 @@
 
         <Pane prefHeight="46.0" prefWidth="1616.0">
           <children>
-            <Button layoutX="14.0" layoutY="8.0" text="Program\Function selector" />
+            <Button layoutX="14.0" layoutY="8.0" text="Program\Function selector" onAction="#onFunctionSelector"/>
             <Separator layoutX="204.0" layoutY="3.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="11.0" />
             <Button fx:id="btnCollapse" layoutX="216.0" layoutY="7.0" onAction="#onCollapse" text="Collapse" />
             <HBox layoutX="306.0" layoutY="6.0" spacing="6">
