--- a/UI/resources/viewFXML/varsTable.fxml
+++ b/UI/resources/viewFXML/varsTable.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="controllers.VarsTableController" spacing="8">
+<VBox spacing="8" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.VarsTableController">
 
     <children>
         <TableView fx:id="tblVars" prefWidth="335.0" VBox.vgrow="ALWAYS">
@@ -12,9 +12,9 @@
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
             <columns>
-                <TableColumn fx:id="colVarName" text="Name" prefWidth="120"/>
-                <TableColumn fx:id="colVarType" text="Type" prefWidth="145"/>
-                <TableColumn fx:id="colVarValue" text="Value" prefWidth="168"/>
+                <TableColumn fx:id="colVarName" prefWidth="118.5" text="Name" />
+                <TableColumn fx:id="colVarType" prefWidth="114.5" text="Type" />
+                <TableColumn fx:id="colVarValue" prefWidth="103.5" text="Value" />
             </columns>
         </TableView>
     </children>
